deploy/kind/envoy-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: envoy1
spec:
  containers:
    - name: envoy-sidecar
      image: envoyproxy/envoy:v1.14.1
      command: ["envoy"]
      args:
        [
          "-c",
          "/etc/envoy/bootstrap/config.yaml",
          "--service-cluster",
          "envoy1",
          "--service-node",
          "envoy1",
        ]
      ports:
        - name: http
          containerPort: 1080
          hostPort: 1080
          protocol: TCP
        - name: https
          containerPort: 1443
          hostPort: 1443
          protocol: TCP
      volumeMounts:
        - name: envoy-sidecar-bootstrap
          mountPath: /etc/envoy/bootstrap
        - name: envoy-sidecar-client-cert
          mountPath: /etc/envoy/tls/client
  volumes:
    - name: envoy-sidecar-bootstrap
      configMap:
        name: envoy-sidecar-bootstrap
    - name: envoy-sidecar-client-cert
      secret:
        secretName: envoy-sidecar-client-cert

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
  annotations:
    marin3r.3scale.net/node-id: envoy1
data:
  config.yaml: |
    clusters:
      - name: echo_api
        connect_timeout: 2s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: echo_api
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: echo-api.3scale.net
                        port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
            sni: echo-api.3scale.net
    listeners:
      - name: https
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 1443
        filter_chains:
          - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite: echo-api.3scale.net
                            cluster: echo_api
                http_filters:
                  - name: envoy.router
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": "type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext"
                common_tls_context:
                  tls_certificate_sds_secret_configs:
                    - name: envoy-server1
                      sds_config:
                        ads: {}
      - name: http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 1080
        filter_chains:
          - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite: echo-api.3scale.net
                            cluster: echo_api
                http_filters:
                  - name: envoy.router
