deploy/kind/example-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: test1
  labels:
    app: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
        marin3r.3scale.net/status: "enabled"
      annotations:
        marin3r.3scale.net/node-id: kuard
        marin3r.3scale.net/ports: envoy-http:1080,envoy-https:1443
        # Map envoy ports to the to the kind extraPortMappings so services
        # are reachable from the docker host
        marin3r.3scale.net/host-port-mappings: envoy-http:1080,envoy-https:1443
    spec:
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-amd64:blue
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: test1
  annotations:
    marin3r.3scale.net/node-id: kuard
data:
  config.yaml: |
    clusters:
      - name: kuard
        connect_timeout: 2s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: kuard
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 8080
    listeners:
      - name: https
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 1443
        filter_chains:
          - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: kuard
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: kuard
                http_filters:
                  - name: envoy.router
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": "type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext"
                common_tls_context:
                  tls_certificate_sds_secret_configs:
                    - name: envoy-server1
                      sds_config:
                        ads: {}
      - name: http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 1080
        filter_chains:
          - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: kuard
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: kuard
                http_filters:
                  - name: envoy.router
